--- a/Project_Song Recomender-Kaggle Spotify dataset.ipynb
+++ b/Project_Song Recomender-Kaggle Spotify dataset.ipynb
@@ -2298,38 +2298,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "id": "9bf4a418",
    "metadata": {},
    "outputs": [],
    "source": [
     "# put everything inside a function\n",
     "def recommend_song():\n",
+    "    cols = ['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo']\n",
+    "    \n",
     "    # get song id\n",
     "    song_name = input('Choose a song: ')\n",
     "    results = sp.search(q=f'track:{song_name}', limit=1)\n",
     "    track_id = results['tracks']['items'][0]['id']\n",
+    "    \n",
     "    # get song features with the obtained id\n",
     "    audio_features = sp.audio_features(track_id)\n",
+    "    \n",
     "    # create dataframe\n",
     "    df_ = pd.DataFrame(audio_features)\n",
-    "    new_features = df_[x.columns]\n",
+    "    new_features = df_[cols]\n",
+    "    \n",
     "    # scale features\n",
     "    scaled_x = scaler.transform(new_features)\n",
+    "    \n",
     "    # predict cluster\n",
     "    cluster = kmeans.predict(scaled_x)\n",
+    "    \n",
     "    # filter dataset to predicted cluster\n",
-    "    filtered_df = np.array(scaled_df[scaled_df['cluster'] == cluster[0]][x.columns], order=\"C\")\n",
+    "    filtered_df = scaled_df[scaled_df['cluster'] == cluster[0]]\n",
+    "    filtered_array = np.array(filtered_df[cols], order=\"C\")\n",
+    "    \n",
     "    # get closest song from filtered dataset\n",
-    "    closest, _ = pairwise_distances_argmin_min(scaled_x, filtered_df)\n",
+    "    closest, _ = pairwise_distances_argmin_min(scaled_x, filtered_array)\n",
+    "    \n",
     "    # return it in a readable way\n",
     "    print('\\n[RECOMMENDED SONG]')\n",
-    "    return ' - '.join([scaled_df.loc[closest]['song name'].values[0], scaled_df.loc[closest]['artist'].values[0]])"
+    "    return ' - '.join([filtered_df.iloc[closest]['song name'].values[0], filtered_df.iloc[closest]['artist'].values[0]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "id": "043fc22a",
    "metadata": {},
    "outputs": [
@@ -2337,7 +2347,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a song: Fake Plastic Trees\n",
+      "Choose a song: Fake Plastic Trees - Radiohead\n",
       "\n",
       "[RECOMMENDED SONG]\n"
      ]
@@ -2345,10 +2355,10 @@
     {
      "data": {
       "text/plain": [
-       "\"When You're Wrong - Brandi Carlile\""
+       "'Fake Plastic Trees - Radiohead'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,44 +2369,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "id": "71f2ff00",
    "metadata": {},
    "outputs": [],
    "source": [
     "# put everything inside a function\n",
     "def recommend_song():\n",
+    "    cols = ['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo']\n",
+    "    \n",
     "    try: \n",
     "        # get song id\n",
     "        song_name = input('Choose a song: ')\n",
     "        results = sp.search(q=f'track:{song_name}', limit=1)\n",
+    "        track_id = results['tracks']['items'][0]['id']\n",
     "\n",
     "        # Check if list is not empty before accessing it\n",
     "        if results['tracks']['items']:\n",
     "            track_id = results['tracks']['items'][0]['id']\n",
     "            \n",
-    "            # get song features with the obtained id\n",
+    "             # get song features with the obtained id\n",
     "            audio_features = sp.audio_features(track_id)\n",
-    "            \n",
+    "\n",
     "            # create dataframe\n",
     "            df_ = pd.DataFrame(audio_features)\n",
-    "            new_features = df_[x.columns]\n",
-    "            \n",
+    "            new_features = df_[cols]\n",
+    "\n",
     "            # scale features\n",
     "            scaled_x = scaler.transform(new_features)\n",
-    "            \n",
+    "\n",
     "            # predict cluster\n",
     "            cluster = kmeans.predict(scaled_x)\n",
-    "            \n",
+    "\n",
     "            # filter dataset to predicted cluster\n",
-    "            filtered_df = np.array(scaled_df[scaled_df['cluster'] == cluster[0]][x.columns], order=\"C\")\n",
-    "        \n",
+    "            filtered_df = scaled_df[scaled_df['cluster'] == cluster[0]]\n",
+    "            filtered_array = np.array(filtered_df[cols], order=\"C\")\n",
+    "\n",
     "            # get closest song from filtered dataset\n",
-    "            closest, _ = pairwise_distances_argmin_min(scaled_x, filtered_df)\n",
+    "            closest, _ = pairwise_distances_argmin_min(scaled_x, filtered_array)\n",
     "            \n",
     "            # return it in a readable way\n",
     "            print('\\n[RECOMMENDED SONG]')\n",
-    "            return ' - '.join([scaled_df.loc[closest]['song name'].values[0], scaled_df.loc[closest]['artist'].values[0]])\n",
+    "            return ' - '.join([filtered_df.iloc[closest]['song name'].values[0], filtered_df.iloc[closest]['artist'].values[0]])\n",
     "        else:\n",
     "            print('No results found for the specified song. Please try again with a different song.')\n",
     "            print('Or try with the following pattern: <song_name> - <artist_name>')\n",
@@ -2407,7 +2421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 60,
    "id": "7e3e1ad6",
    "metadata": {},
    "outputs": [
@@ -2423,10 +2437,10 @@
     {
      "data": {
       "text/plain": [
-       "\"When You're Wrong - Brandi Carlile\""
+       "'Fake Plastic Trees - Radiohead'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2437,7 +2451,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
+   "id": "41bb28c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_song():\n",
+    "    cols = ['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo']\n",
+    "    \n",
+    "    try: \n",
+    "        # get song id\n",
+    "        song_name = input('Choose a song: ')\n",
+    "        results = sp.search(q=f'track:{song_name}', limit=1)\n",
+    "        \n",
+    "        # Ensure there are results before proceeding\n",
+    "        if results['tracks']['items']:\n",
+    "            track_id = results['tracks']['items'][0]['id']\n",
+    "            chosen_song_name = results['tracks']['items'][0]['name']  # Store chosen song's name\n",
+    "            chosen_artist_name = results['tracks']['items'][0]['artists'][0]['name']  # Store chosen artist's name\n",
+    "            \n",
+    "             # get song features with the obtained id\n",
+    "            audio_features = sp.audio_features(track_id)\n",
+    "\n",
+    "            # create dataframe\n",
+    "            df_ = pd.DataFrame(audio_features)\n",
+    "            new_features = df_[cols]\n",
+    "\n",
+    "            # scale features\n",
+    "            scaled_x = scaler.transform(new_features)\n",
+    "\n",
+    "            # predict cluster\n",
+    "            cluster = kmeans.predict(scaled_x)\n",
+    "\n",
+    "            # filter dataset to predicted cluster\n",
+    "            filtered_df = scaled_df[scaled_df['cluster'] == cluster[0]]\n",
+    "\n",
+    "            # Add a filter to exclude the chosen song\n",
+    "            filtered_df = filtered_df[~((filtered_df['song name'].str.lower() == chosen_song_name.lower()) &\n",
+    "                                        (filtered_df['artist'].str.lower() == chosen_artist_name.lower()))]\n",
+    "\n",
+    "            filtered_array = np.array(filtered_df[cols], order=\"C\")\n",
+    "\n",
+    "            # get closest song from filtered dataset\n",
+    "            closest, _ = pairwise_distances_argmin_min(scaled_x, filtered_array)\n",
+    "            \n",
+    "            # return it in a readable way\n",
+    "            print('\\n[RECOMMENDED SONG]')\n",
+    "            recommended_song = filtered_df.iloc[closest[0]]  # Accessing the first closest match\n",
+    "            return ' - '.join([recommended_song['song name'], recommended_song['artist']])\n",
+    "            \n",
+    "        else:\n",
+    "            return 'No results found for the specified song. Please try again with a different song.'\n",
+    "\n",
+    "    except IndexError as e:\n",
+    "        return f\"An error occurred: {e}\"\n",
+    "\n",
+    "# Assumes 'scaler' and 'kmeans' are already fitted, and 'scaled_df' is your dataset with song features and cluster assignments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "id": "dbf59890",
    "metadata": {},
    "outputs": [
@@ -2445,10 +2519,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a song: Duster - Black Midi\n",
-      "No results found for the specified song. Please try again with a different song.\n",
-      "Or try with the following pattern: <song_name> - <artist_name>\n"
+      "Choose a song: Fake Plastic Trees - Radiohead\n",
+      "\n",
+      "[RECOMMENDED SONG]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'脈搏奔流 - Danny Chan;Rico Fung and David at Studio A;Tom Brown'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2457,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "id": "b058c005",
    "metadata": {},
    "outputs": [
@@ -2489,70 +2573,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4656</th>\n",
-       "      <td>Brandi Carlile</td>\n",
-       "      <td>8</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8171</th>\n",
-       "      <td>Brandi Carlile</td>\n",
-       "      <td>13</td>\n",
+       "      <th>6532</th>\n",
+       "      <td>Danny Chan</td>\n",
+       "      <td>11</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27074</th>\n",
-       "      <td>Brandi Carlile</td>\n",
-       "      <td>43</td>\n",
+       "      <th>21689</th>\n",
+       "      <td>Danny Chan</td>\n",
+       "      <td>36</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33391</th>\n",
-       "      <td>Brandi Carlile</td>\n",
+       "      <th>30230</th>\n",
+       "      <td>Danny Chan</td>\n",
+       "      <td>47</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33573</th>\n",
+       "      <td>Danny Chan</td>\n",
        "      <td>53</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39748</th>\n",
-       "      <td>Brandi Carlile</td>\n",
+       "      <th>39511</th>\n",
+       "      <td>Danny Chan</td>\n",
        "      <td>65</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48630</th>\n",
-       "      <td>Brandi Carlile</td>\n",
-       "      <td>78</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58689</th>\n",
-       "      <td>Brandi Carlile</td>\n",
-       "      <td>97</td>\n",
        "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>60585</th>\n",
-       "      <td>Brandi Carlile</td>\n",
-       "      <td>100</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               artist  cluster  key\n",
-       "4656   Brandi Carlile        8    2\n",
-       "8171   Brandi Carlile       13    1\n",
-       "27074  Brandi Carlile       43    3\n",
-       "33391  Brandi Carlile       53    2\n",
-       "39748  Brandi Carlile       65    1\n",
-       "48630  Brandi Carlile       78    1\n",
-       "58689  Brandi Carlile       97    2\n",
-       "60585  Brandi Carlile      100    1"
+       "           artist  cluster  key\n",
+       "6532   Danny Chan       11    1\n",
+       "21689  Danny Chan       36    3\n",
+       "30230  Danny Chan       47    1\n",
+       "33573  Danny Chan       53    1\n",
+       "39511  Danny Chan       65    2"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2562,13 +2625,13 @@
     "result_df = scaled_df.groupby(['cluster', 'artist'], as_index=False).count().sort_values(['cluster', 'key'], ascending=[True, False])[['artist', 'cluster', 'key']].reset_index(drop=True).copy()\n",
     "\n",
     "# Filtering by a specific artist\n",
-    "specific_artist_df = result_df.loc[result_df['artist'] == 'Brandi Carlile']\n",
+    "specific_artist_df = result_df.loc[result_df['artist'] == 'Danny Chan']\n",
     "specific_artist_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "id": "fb1b11f3",
    "metadata": {},
    "outputs": [
@@ -2663,7 +2726,7 @@
        "54521  Radiohead       89    1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2673,6 +2736,14 @@
     "specific_artist_df = result_df.loc[result_df['artist'] == 'Radiohead']\n",
     "specific_artist_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1f8c604",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
