--- a/Project_Song Recomender.ipynb
+++ b/Project_Song Recomender.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c2138efc",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d1b32c00",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "[100 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9ea8e129",
    "metadata": {},
    "outputs": [
@@ -304,7 +304,7 @@
        "[200 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "2f943b94",
    "metadata": {},
    "outputs": [
@@ -325,8 +325,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artist: Fuerza Regida\n",
-      "Song: Tu Name\n"
+      "Artist: Teddy Swims\n",
+      "Song: Lose Control\n"
      ]
     }
    ],
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1c9e5549",
    "metadata": {},
    "outputs": [],
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "b6ad1bf4",
    "metadata": {},
    "outputs": [
@@ -389,10 +389,10 @@
     {
      "data": {
       "text/plain": [
-       "'another song from somewhere else: Woman, Little Simz (feat. Cleo Sol)'"
+       "'another song from somewhere else: Way Out, Indigo De Souza'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a05a4705",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f4c105e6",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "471830ed",
    "metadata": {},
    "outputs": [
@@ -842,7 +842,7 @@
        "[3008 rows x 18 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c6d40e8b",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1307,7 @@
        "[3008 rows x 32 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9b5d5499",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1695,7 @@
        "[153 rows x 18 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "9e1792aa",
    "metadata": {},
    "outputs": [
@@ -2147,7 +2147,7 @@
        "[156 rows x 32 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2171,7 +2171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "150d1442",
    "metadata": {},
    "outputs": [
@@ -2535,7 +2535,7 @@
        "[3161 rows x 18 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0f0146d1",
    "metadata": {},
    "outputs": [
@@ -2558,7 +2558,7 @@
        "132"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2570,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "5dbd0120",
    "metadata": {},
    "outputs": [
@@ -2934,7 +2934,7 @@
        "[3029 rows x 18 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2947,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "7d3d78ec",
    "metadata": {
     "scrolled": true
@@ -3414,7 +3414,7 @@
        "[3164 rows x 32 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3427,7 +3427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "cd4e3fd7",
    "metadata": {},
    "outputs": [
@@ -3437,7 +3437,7 @@
        "122"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3449,7 +3449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "aab42a3e",
    "metadata": {},
    "outputs": [
@@ -3914,7 +3914,7 @@
        "[3042 rows x 32 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3938,7 +3938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "1b535fce",
    "metadata": {},
    "outputs": [
@@ -4351,7 +4351,7 @@
        "[2760 rows x 21 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4364,7 +4364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "211ac311",
    "metadata": {},
    "outputs": [
@@ -4777,7 +4777,7 @@
        "[2760 rows x 21 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4791,7 +4791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "3242c442",
    "metadata": {},
    "outputs": [
@@ -4823,7 +4823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "fc49d67d",
    "metadata": {},
    "outputs": [
@@ -4833,7 +4833,7 @@
        "Text(0.5, 1.0, 'Energy Distribution by Genre')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4861,7 +4861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "47b4590c",
    "metadata": {},
    "outputs": [
@@ -4871,7 +4871,7 @@
        "Text(0.5, 1.0, 'Energy vs. Danceability by Genre')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4894,7 +4894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "558e886d",
    "metadata": {},
    "outputs": [
@@ -4904,7 +4904,7 @@
        "Text(0.5, 1.0, 'Tempo vs. Valence by Genre')"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4988,7 +4988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "7247677d",
    "metadata": {},
    "outputs": [],
@@ -5023,7 +5023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "1e34ee7c",
    "metadata": {},
    "outputs": [
@@ -5177,7 +5177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "bb0f8876",
    "metadata": {},
    "outputs": [
@@ -5580,7 +5580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "5b749fb5",
    "metadata": {},
    "outputs": [
@@ -5759,7 +5759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "0ab329c6",
    "metadata": {},
    "outputs": [
@@ -5830,7 +5830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "id": "4f744396",
    "metadata": {},
    "outputs": [
@@ -6130,7 +6130,7 @@
        "[2760 rows x 14 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6150,7 +6150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 31,
    "id": "cf498713",
    "metadata": {},
    "outputs": [
@@ -6269,7 +6269,7 @@
        "[2459 rows x 3 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6289,7 +6289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "id": "b8e47ecc",
    "metadata": {},
    "outputs": [
@@ -6297,7 +6297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a song: Fake Plastic Trees - Radiohead\n"
+      "Choose a song: Fake Plastic Trees\n"
      ]
     }
    ],
@@ -6319,7 +6319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 33,
    "id": "5d459084",
    "metadata": {},
    "outputs": [
@@ -6329,7 +6329,7 @@
        "(22, 'I Think You Should Leave', 'Winona Fighter')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6340,7 +6340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "id": "9bf4a418",
    "metadata": {},
    "outputs": [],
@@ -6371,7 +6371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 35,
    "id": "043fc22a",
    "metadata": {},
    "outputs": [
@@ -6379,7 +6379,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a song: Fake Plastic Trees - Radiohead\n",
+      "Choose a song: Fake Plastic Trees\n",
       "\n",
       "[RECOMMENDED SONG]\n"
      ]
@@ -6390,7 +6390,7 @@
        "'I Think You Should Leave - Winona Fighter'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6401,48 +6401,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 36,
    "id": "71f2ff00",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# put everything inside a function\n",
     "def recommend_song():\n",
+    "    cols = ['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo']\n",
+    "    \n",
     "    try: \n",
     "        # get song id\n",
     "        song_name = input('Choose a song: ')\n",
     "        results = sp.search(q=f'track:{song_name}', limit=1)\n",
-    "\n",
-    "        # Check if list is not empty before accessing it\n",
+    "        \n",
+    "        # Ensure there are results before proceeding\n",
     "        if results['tracks']['items']:\n",
     "            track_id = results['tracks']['items'][0]['id']\n",
-    "            # get song features with the obtained id\n",
+    "            chosen_song_name = results['tracks']['items'][0]['name']  # Store chosen song's name\n",
+    "            chosen_artist_name = results['tracks']['items'][0]['artists'][0]['name']  # Store chosen artist's name\n",
+    "            \n",
+    "             # get song features with the obtained id\n",
     "            audio_features = sp.audio_features(track_id)\n",
+    "\n",
     "            # create dataframe\n",
     "            df_ = pd.DataFrame(audio_features)\n",
-    "            new_features = df_[x.columns]\n",
+    "            new_features = df_[cols]\n",
+    "\n",
     "            # scale features\n",
     "            scaled_x = scaler.transform(new_features)\n",
+    "\n",
     "            # predict cluster\n",
     "            cluster = kmeans.predict(scaled_x)\n",
+    "\n",
     "            # filter dataset to predicted cluster\n",
-    "            filtered_df = np.array(scaled_df[scaled_df['cluster'] == cluster[0]][x.columns], order=\"C\")\n",
+    "            filtered_df = scaled_df[scaled_df['cluster'] == cluster[0]]\n",
+    "\n",
+    "            # Add a filter to exclude the chosen song\n",
+    "            filtered_df = filtered_df[~((filtered_df['song name'].str.lower() == chosen_song_name.lower()) &\n",
+    "                                        (filtered_df['artist'].str.lower() == chosen_artist_name.lower()))]\n",
+    "\n",
+    "            filtered_array = np.array(filtered_df[cols], order=\"C\")\n",
+    "\n",
     "            # get closest song from filtered dataset\n",
-    "            closest, _ = pairwise_distances_argmin_min(scaled_x, filtered_df)\n",
+    "            closest, _ = pairwise_distances_argmin_min(scaled_x, filtered_array)\n",
+    "            \n",
     "            # return it in a readable way\n",
     "            print('\\n[RECOMMENDED SONG]')\n",
-    "            return ' - '.join([scaled_df.loc[closest]['song name'].values[0], scaled_df.loc[closest]['artist'].values[0]])\n",
+    "            recommended_song = filtered_df.iloc[closest[0]]  # Accessing the first closest match\n",
+    "            return ' - '.join([recommended_song['song name'], recommended_song['artist']])\n",
+    "            \n",
     "        else:\n",
-    "            print('No results found for the specified song. Please try again with a different song.')\n",
-    "            print('Or try with the following pattern: <song_name> - <artist_name>')\n",
+    "            return 'No results found for the specified song. Please try again with a different song.'\n",
     "\n",
     "    except IndexError as e:\n",
-    "        print(f\"An error occurred: {e}\")"
+    "        return f\"An error occurred: {e}\"\n",
+    "\n",
+    "# Assumes 'scaler' and 'kmeans' are already fitted, and 'scaled_df' is your dataset with song features and cluster assignments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 37,
    "id": "7e3e1ad6",
    "metadata": {},
    "outputs": [
@@ -6450,7 +6469,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a song: Fake Plastic Trees - Radiohead\n",
+      "Choose a song: Fake Plastic Trees\n",
       "\n",
       "[RECOMMENDED SONG]\n"
      ]
@@ -6458,10 +6477,10 @@
     {
      "data": {
       "text/plain": [
-       "'I Think You Should Leave - Winona Fighter'"
+       "'River Of Deceit - Mad Season'"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6472,7 +6491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "dbf59890",
    "metadata": {},
    "outputs": [
@@ -6480,10 +6499,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a song: Duster - Black Midi\n",
-      "No results found for the specified song. Please try again with a different song.\n",
-      "Or try with the following pattern: <song_name> - <artist_name>\n"
+      "Choose a song: Fake Plastic Trees\n",
+      "\n",
+      "[RECOMMENDED SONG]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'River Of Deceit - Mad Season'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -6492,7 +6521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "id": "b058c005",
    "metadata": {},
    "outputs": [
@@ -6524,9 +6553,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1787</th>\n",
-       "      <td>Winona Fighter</td>\n",
-       "      <td>25</td>\n",
+       "      <th>288</th>\n",
+       "      <td>Mad Season</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1496</th>\n",
+       "      <td>Mad Season</td>\n",
+       "      <td>22</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -6534,11 +6569,12 @@
        "</div>"
       ],
       "text/plain": [
-       "              artist  cluster  key\n",
-       "1787  Winona Fighter       25    1"
+       "          artist  cluster  key\n",
+       "288   Mad Season        4    1\n",
+       "1496  Mad Season       22    1"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6548,13 +6584,13 @@
     "result_df = scaled_df.groupby(['cluster', 'artist'], as_index=False).count().sort_values(['cluster', 'key'], ascending=[True, False])[['artist', 'cluster', 'key']].reset_index(drop=True).copy()\n",
     "\n",
     "# Filtering by a specific artist\n",
-    "specific_artist_df = result_df.loc[result_df['artist'] == 'Winona Fighter']\n",
+    "specific_artist_df = result_df.loc[result_df['artist'] == 'Mad Season']\n",
     "specific_artist_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "id": "0f83abc6",
    "metadata": {},
    "outputs": [
@@ -6607,7 +6643,7 @@
        "1631  Radiohead       24    1"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
