Adding encryptation to Spotify's credentials

--- a/Project_Song Recomender-Kaggle Spotify dataset.ipynb
+++ b/Project_Song Recomender-Kaggle Spotify dataset.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a05a4705",
    "metadata": {},
    "outputs": [],
@@ -447,14 +447,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "id": "8d9fe8e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Getting the client_id and client_secret variables created earlier using cmd\n",
+    "c_id = os.getenv('SPOTIFY_CLIENT_ID')\n",
+    "c_secret = os.getenv('SPOTIFY_CLIENT_SECRET')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "f4c105e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Initialize SpotiPy with user credentias\n",
-    "sp = spotipy.Spotify(auth_manager=SpotifyClientCredentials(client_id=\"c43ae4f18c0d4b2c8b04c93649fa4b72\",\n",
-    "                                                           client_secret=\"1f7865f1e7aa439e9e997bc38b591855\"))"
+    "sp = spotipy.Spotify(auth_manager=SpotifyClientCredentials(client_id=c_id,\n",
+    "                                                           client_secret=c_secret))"
    ]
   },
   {
@@ -2452,7 +2466,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "41bb28c0",
+   "id": "3d4a0b95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2740,7 +2754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1f8c604",
+   "id": "b3365e89",
    "metadata": {},
    "outputs": [],
    "source": []
