Mafalda adding Streamlit app

--- a/Project_Song Recomender.ipynb
+++ b/Project_Song Recomender.ipynb
@@ -4806,7 +4806,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7e7660a4",
+   "id": "7c6b6374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5013,7 +5013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "7247677d",
    "metadata": {},
    "outputs": [],
@@ -5784,7 +5784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "0ab329c6",
    "metadata": {},
    "outputs": [
@@ -5855,7 +5855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "id": "4f744396",
    "metadata": {},
    "outputs": [
@@ -6155,7 +6155,7 @@
        "[2760 rows x 14 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6681,8 +6681,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "id": "d2b79832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving the scaled_df as a csv file\n",
+    "scaled_df.to_csv(r\"C:\\Users\\mafal\\Documents\\ironhack\\projects\\project-song-recommender\\files_for_lab\\scaled_tracks.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "id": "b7c25c86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "# Creating pickle file for our scaler\n",
+    "with open(\"scaler.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(scaler, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "807c8faf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating pickle file for our kmeans\n",
+    "with open(\"kmeans.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(kmeans, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f6bcd21",
    "metadata": {},
    "outputs": [],
    "source": []
